# trackeval_lite_maly

./: README.md  pyproject.toml  requirements.txt
scripts/: run_mot_challenge.py
trackeval_lite/: cli.py  eval.py  utils.py
trackeval_lite/datasets/: _base_dataset.py  mot_challenge_2d_box.py
trackeval_lite/metrics/: _base_metric.py  clear.py  count.py  hota.py  identity.py  vace.py
trackeval_lite/scripts/: __init__.py  run_mot_challenge.py
