[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trackeval_lite"
version = "0.1.0"
description = "A lightweight version of TrackEval for MOT challenge evaluation"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
]

[project.scripts]
trackeval-lite = "trackeval_lite.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["trackeval_lite*"]

